# hackapizza

./: .env.example  .gitignore  README.md  config.py  config.yml  customer_profiles.json  generate_customer_profiles.py  main.py  mock_sse_server.py  pyproject.toml
agents/: bidding.py  customer_profiler.py  manager.py  market.py  menu.py  news_watcher.py  recipe_strategy.py  serving.py  speaking.py
docs/bruno/Hackapizza/: GET All Restaurants.bru  GET Bid history.bru  GET Dishes.bru  GET Market Entries.bru  GET Recipes.bru  GET Restaurant Info.bru  GET Restaurant Menu.bru  POST Close bid.bru  POST Create market entry.bru  POST Delete market entry.bru  POST Execute transaction.bru  POST Prepare dish.bru  POST Save menu.bru  POST Send message.bru  POST Serve dish.bru  POST Update restaurant Open.bru  bruno.json  collection.bru
docs/bruno/Hackapizza/local_api/: Get history.bru  Get optimal.bru  History dish.bru  POST Run Dump.bru  POST Set Turn.bru  folder.bru
dumps/: 0.json  2026-03-01T05-29-06-936146+00-00.json  71.json  73.json  74.json  75.json  76.json  81.json
hackapizza/: launcher.py
infrastructure/: history_client.py  http_client.py  llm_factory.py  mcp_client.py  sse_listener.py
resources/: dashboard.html
resources/cook_server/: README.md  main.py  pyproject.toml  server.py
resources/cook_server/static/: index.html
resources/ingredients/: ingredient_frequencies.yaml
state/: game_state.py  memory.py  planner.py
utils/: client_template.py  history_util.py  ingredient_data.py  logger.py  tracing.py
