[tool.poetry]
name = "hackapizza"
version = "0.1.0"
description = "Hackapizza AI restaurant agent for the gastronomic multiverse hackathon"
authors = ["Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aiohttp = "^3.9"
datapizza-ai = "^0.0.9"
datapizza-ai-clients-openai-like = "*"
python-dotenv = "^1.0"
pydantic = "^2.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
