[tool.poetry]
name = "hackapizza"
version = "0.1.0"
description = "Hackapizza AI restaurant agent for the gastronomic multiverse hackathon"
authors = ["Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aiohttp = "^3.9"
datapizza-ai = "^0.0.9"
datapizza-ai-clients-openai-like = "*"
python-dotenv = "^1.0"
pydantic = "^2.0"
pyyaml = "^6.0.3"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
uv = "^0.10.7"
pyaml = "^26.2.1"

[tool.poetry.scripts]
run-with-webapp = "hackapizza.launcher:run_with_webapp"
run-without-webapp = "hackapizza.launcher:run_without_webapp"
run-webapp-only = "hackapizza.launcher:run_webapp_only"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"